--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3811,7 +3811,7 @@ body {
 		#banner p {
 			letter-spacing: 0.225em;
 			text-transform: uppercase;
-			color: ;
+			padding: 0 1em 0;
 		}
 
 			#banner p a {
