--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,7 @@ input, select, textarea {
 }
 
 @media screen and (max-width: 736px) {
-	.inner .logo img {max-width: 100%;}
+	.inner img {max-width: 100%;}
 
 }
 
