--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1945,13 +1945,12 @@ body {
   }
   .popup .close {
 	position: absolute;
-	top: 20px;
-	right: 30px;
+	bottom: 10px;
 	transition: all 200ms;
 	font-size: 30px;
 	font-weight: bold;
 	text-decoration: none;
-	color: #333;
+	color: #ffffff;
 	z-index: 1;
   }
   .popup .close:hover {
