--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1950,7 +1950,7 @@ body {
 	font-size: 30px;
 	font-weight: bold;
 	text-decoration: none;
-	color: #ffffff;
+	color: #2e3842;
 	z-index: 1;
   }
   .popup .close:hover {
