--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,11 +164,15 @@ input, select, textarea {
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		color: inherit;
-		text-decoration: none;
+		margin-bottom: 1rem;
+		color: #306D9E !important;
+		text-decoration: underline;
+		text-underline-offset: 2.5px;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
+			
 		}
 
 	strong, b {
