--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3631,7 +3631,7 @@ body {
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #063440;
+		background: #216b7e;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
