--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4002,10 +4002,10 @@ body {
 
 	#main > header {
 		padding: 2em 0 2em 0 ;
-		background-image: -moz-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -4152,10 +4152,10 @@ body {
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: -moz-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -4173,10 +4173,10 @@ body {
 
 	body.is-mobile.landing #banner,
 	body.is-mobile.landing .wrapper.style4 {
-		background-image: -moz-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #1f6578, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
