--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4171,7 +4171,8 @@ body {
 		background: none;
 	}
 
-	body.is-mobile.landing #banner,{
+	body.is-mobile.landing #banner,
+	body.is-mobile.landing .wrapper.style4 {
 		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
 		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
