--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,9 @@
   text-decoration: none;
 }
 
+#CookiebotWidget * {
+    color: hsl(180deg 65.6% 29.81%);
+}
 
 
 html, body, div, span, applet, object,
