--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@
   text-decoration: none;
 }
 
-#CookiebotWidget * {
+#CookiebotWidget .CookiebotWidget-logo svg circle {
     color: hsl(180deg 65.6% 29.81%)!important;
 }
 
