--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,24 @@
 #CookiebotWidget button, #CookiebotWidget li, #CookiebotWidget strong, #CookiebotWidget svg, #CookiebotWidget ul {
 	box-shadow: none!important;
 }
+#CookiebotWidget #CookiebotWidget-buttons #CookiebotWidget-btn-change {
+    background-color: hsla(180,51.4%,51.6%,1)!important;
+    border-color: #ffffff!important;
+    color: #FFFFFF!important;
+}
+
+#CookiebotWidget #CookiebotWidget-buttons #CookiebotWidget-btn-withdraw {
+    background-color: hsla(180,51.4%,51.6%,1)!important;
+    border-color: hsla(180,51.4%,51.6%,1)!important;
+    color: #ffffff!important;
+    transition-delay: .3s!important;
+
+#CookiebotWidget .CookiebotWidget-consent-details button {
+		color: hsla(180,51.4%,51.6%,1)!important;
+}
+#CookiebotWidget .CookiebotWidget-body .CookiebotWidget-consents-list li.CookiebotWidget-approved svg {
+    fill: hsla(180,51.4%,51.6%,1);
+}
 
 
 html, body, div, span, applet, object,
