--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,7 @@
 		color: hsla(180,51.4%,51.6%,1)!important;
 }
 #CookiebotWidget .CookiebotWidget-body .CookiebotWidget-consents-list li.CookiebotWidget-approved svg {
-    fill: hsla(180,51.4%,51.6%,1);
+    fill: hsla(180,51.4%,51.6%,1)!important;
 }
 
 
