--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3059,7 +3059,7 @@ body {
 			}
 
 			.wrapper.style1 header.major p {
-				color: #2a779d;
+				color: #2a779d!important;
 			}
 
 			.wrapper.style1 label {
