--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3025,7 +3025,7 @@ body {
 
 		.wrapper.style1 {
 			background-color: rgb(240 240 240);
-			color: #000000;
+			color: #2a779d;
 		}
 
 			.wrapper.style1 strong, .wrapper.style1 b {
