--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3025,7 +3025,7 @@ body {
 
 		.wrapper.style1 {
 			background-color: rgb(240 240 240);
-			color: #2a779d!important;
+			color: #228ea6!important;
 		}
 
 			.wrapper.style1 strong, .wrapper.style1 b {
@@ -3059,7 +3059,7 @@ body {
 			}
 
 			.wrapper.style1 header.major p {
-				color: #2a779d!important;
+				color: #228ea6!important;
 			}
 
 			.wrapper.style1 label {
