--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,14 @@
 /*site wide*/
 
 
+.flex-parent {
+	display: flex;
+  }
+  
+  .jc-center {
+	justify-content: center;
+  }
+
 .image-link {
   text-decoration: none; 
 }
