--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,6 +173,12 @@ input, select, textarea {
 
 		}
 
+		@media screen and (min-width: 980px) {
+			.inner img {
+				max-width: 60%;
+			}
+		}
+
 		@media screen and (max-width: 736px) {
 
 			body, input, select, textarea {
