--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,9 +173,9 @@ input, select, textarea {
 
 		}
 
-		@media screen and (min-width: 980px) {
+		@media screen and (max-width: 980px) {
 			.inner img {
-				max-width: 60%;
+				max-width: 60%!important;
 			}
 		}
 
