--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,7 +175,7 @@ input, select, textarea {
 
 		@media screen and (max-width: 980px) {
 			.inner img {
-				max-width: 50%!important;
+				max-width: 60%;
 			}
 		}
 
