--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,7 +173,11 @@ input, select, textarea {
 
 		}
 
-		
+		@media screen and (min-width: 980px) {
+			.inner img {
+				max-width: 60%!important;
+			}
+		}
 
 		@media screen and (max-width: 736px) {
 
