--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,6 +196,11 @@ input, select, textarea {
 					max-width: 50%;
 				}
 			}
+			@media screen and (max-width: 736px) {
+				.inner img {
+					max-width: 100%;
+				}
+			}
 
 
 	a {
