--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,7 +186,7 @@ input, select, textarea {
 		
 		/*PM sets image size and centers it when on tablet*/
 		@media screen and (max-width: 980px) {
-			img {max-width: 60%;
+			img, .inner img  {max-width: 60%;
    				display: flex;
 				margin: auto;
 				}
@@ -197,8 +197,6 @@ input, select, textarea {
 				}
 			}
 			
-
-
 	a {
 		-moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		-webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
