--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,16 +186,12 @@ input, select, textarea {
 		
 		/*PM sets image size and centers it when on tablet*/
 		@media screen and (max-width: 980px) {
-			img, .inner img  {max-width: 60%;
+			img {max-width: 60%;
    				display: flex;
 				margin: auto;
 				}
 			}
-			@media screen and (max-width: 980px) {
-				.inner img {
-					max-width: 50%;
-				}
-			}
+			
 			
 	a {
 		-moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
