--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,7 +193,7 @@ input, select, textarea {
 			}
 
 			@media screen and (max-width: 1680px) {
-			.inner img {max-width: 50%!important;
+			.inner img {max-width: 50%;
 					
 				}
 	
