--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,8 +120,8 @@ input, select, textarea {
 
 
 /* Basic */
-@media screen and (max-width: 1900px) {
-	.inner img {max-width: 50%;	
+@media screen and (max-width: 800px) {
+	.inner img {max-width: 50%!important;	
 		}
 	}
 	@-ms-viewport {
