--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,11 +188,19 @@ input, select, textarea {
 		}
 		
 		/*PM sets image size and centers it when on tablet*/
-		@media screen and (max-width: 980px) {
+		/*@media screen and (max-width: 980px) {
 			img {max-width: 60%;
    				display: flex;
 				margin: auto;
 				}
+			}*/
+		@media screen and (max-width: 1280px)
+			.inner img {
+				max-width: 50%!important;
+			}
+		@media screen and (max-width: 736px)
+		.inner img {
+    		max-width: 100%!important;
 			}
 			
 			
