--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1930,7 +1930,7 @@ input, select, textarea {
 
 body {
 	font-family: Arial, sans-serif;
-	background-color: #063440;
+	background-color: #1a7287;
 	height: 100vh;
   }
   
