--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,7 +218,7 @@ input, select, textarea {
 			border-bottom-color: transparent;
 			text-decoration: underline;
 			text-underline-offset: 2.5px;
-			color: #1caccf;
+			color: #d3f6ff;
 			
 		}
 
