--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2921,6 +2921,15 @@ body {
 			max-width: 48em;
 			width: 60%;
 		}
+		.spotlight .video {
+			padding: 2em 4em 2em 4em ;
+			-moz-order: 2;
+			-webkit-order: 2;
+			-ms-order: 2;
+			order: 2;
+			max-width: 48em;
+			width: 60%;
+		}
 
 		.spotlight:nth-child(2n) {
 			-moz-flex-direction: row-reverse;
