--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,19 @@
     fill: hsla(180,51.4%,51.6%,1)!important;
 }
 
+#CybotCookiebotDialogFooter .CybotCookiebotDialogBodyButton {
+    background-color: transparent;
+    border: 2px solid hsla(180,51.4%,51.6%,1);
+    border-radius: 0.25em;
+    color: hsla(180,51.4%,51.6%,1);
+    display: block;
+    font-weight: 600;
+    padding: 0em;
+    text-align: center;
+    user-select: none;
+    width: 100%;
+}
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
