--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,18 +48,10 @@
 }
 
 #CybotCookiebotDialogFooter .CybotCookiebotDialogBodyButton {
-    background-color: transparent;
-    border: 2px solid hsla(180,51.4%,51.6%,1);
-    border-radius: 0.25em;
-    color: hsla(180,51.4%,51.6%,1);
-    display: block;
-    font-weight: 600;
-    padding: 0em;
-    text-align: center;
-    user-select: none;
-    width: 100%;
+    border: 2px solid hsla(180,51.4%,51.6%,1)!important;
+    color: hsla(180,51.4%,51.6%,1)!important;
+    user-select: none!important;
 }
-
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
