--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,11 @@
     background-color: #218ea6!important;
 }
 
+#CybotCookiebotDialogNav .CybotCookiebotDialogNavItemLink.CybotCookiebotDialogActive {
+    border-bottom: 1px solid hsla(180,51.4%,51.6%,1)!important;
+    color: hsla(180,51.4%,51.6%,1)!important;
+}
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
