--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,9 @@
     border-bottom: 1px solid hsla(180,51.4%,51.6%,1)!important;
     color: hsla(180,51.4%,51.6%,1)!important;
 }
-
+#CybotCookiebotDialog .CookieCard .CybotCookiebotDialogDetailBodyContentCookieContainerButton:hover, #CybotCookiebotDialog .CookieCard .CybotCookiebotDialogDetailBodyContentIABv2Tab:hover, #CybotCookiebotDialogDetailBodyContentCookieContainerTypes .CybotCookiebotDialogDetailBodyContentCookieProvider:not(.CybotCookiebotDialogDetailBodyContentCookieInfoCount):hover {
+    color: hsla(180,51.4%,51.6%,1)!important;
+}
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
