--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,6 +65,10 @@
     color: hsla(180,51.4%,51.6%,1)!important;
 }
 
+#CybotCookiebotDialog input:checked+.CybotCookiebotDialogBodyLevelButtonSlider {
+    background-color: hsla(180,51.4%,51.6%,1)!important;
+}
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
