--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3617,7 +3617,7 @@ body {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #238da6;
+		background: #40b2cc;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
