--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3381,7 +3381,6 @@ body {
 				box-shadow: inset 0 0 0 2px rgb(255, 255, 255);
 				color: #ffffff;
 				margin-bottom: 2em;
-				font-size: 10px;
 			}
 
 				.wrapper.style3 input[type="submit"]:hover,
@@ -3404,6 +3403,13 @@ body {
 
 				.wrapper.style3 .features li {
 					border-top-color: rgba(0, 0, 0, 0.125);
+				}
+				.wrapper.style3 input[type="submit"],
+				.wrapper.style3 input[type="reset"],
+				.wrapper.style3 input[type="button"],
+				.wrapper.style3 button,
+				.wrapper.style3 .button {
+				font-size: 10px;
 				}
 
 			}
