--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3380,7 +3380,8 @@ body {
 			.wrapper.style3 .button {
 				box-shadow: inset 0 0 0 2px rgb(255, 255, 255);
 				color: #ffffff;
-				margin-bottom: 2em;
+				margin-bottom: 5em;
+    			font-size: 15px;
 			}
 
 				.wrapper.style3 input[type="submit"]:hover,
@@ -3410,6 +3411,7 @@ body {
 				.wrapper.style3 button,
 				.wrapper.style3 .button {
 				font-size: 10px;
+				margin-bottom: 2em;
 				}
 
 			}
