--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2036,6 +2036,12 @@ body {
 	max-height: 30%;
 	overflow: auto;
   }
+
+  .topright {
+	position: absolute;
+	right: 8px;
+	top: 5px;
+  }
   
   @media screen and (max-width: 700px){
 	.box{
