--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4232,7 +4232,7 @@ body {
 /* Main */
 
 	#main > header {
-		padding: 4em 0 2em 0 ;
+		padding: 4em 0 2em 0!important;
 		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
 		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
