--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3430,7 +3430,7 @@ body {
 			}
 
 			.wrapper.style3 header p {
-				color: #b9bad4;
+				color: #ffffff;
 			}
 
 			.wrapper.style3 header.major h2, .wrapper.style3 header.major h3, .wrapper.style3 header.major h4, .wrapper.style3 header.major h5, .wrapper.style3 header.major h6 {
