--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3247,7 +3247,7 @@ body {
 				color: #ffffff;
 			}
 			.wrapper.style1 h2 {
-				color: #000000;
+				color: rgb(27 73 89);
 			}
 			.wrapper.style1 h3, .wrapper.style1 h4, .wrapper.style1 h5, .wrapper.style1 h6 {
 				color: #ffffff;
