--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2961,7 +2961,7 @@ body {
 				}
 		
 				.package-price  li:nth-child(1) {
-						background-color: hwb(190.83deg 19.45% 1.42%)!important;
+						background-color: hwb(190.83deg 46.7% 8.1%)!important
 						text-align: center;
 					}
 		
