--- a/assets/css/main copy.css
+++ b/assets/css/main copy.css
@@ -1,4 +1,4 @@
-@import url(fontawesome-all.min.css);
+@import url("../../../PDP-Website%20(Test)/assets/css/fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
 
 /*
@@ -3837,7 +3837,7 @@ body {
 					}
 
 		#menu .close {
-			background-image: url("images/close.svg");
+			background-image: url("../../../PDP-Website%20(Test)/assets/css/images/close.svg");
 			background-position: 4.85em 1em;
 			background-repeat: no-repeat;
 			border: 0;
@@ -3953,7 +3953,7 @@ body {
 						}
 
 							#header nav > ul > li > a.menuToggle:after {
-								background-image: url("images/bars.svg");
+								background-image: url("../../../PDP-Website%20(Test)/assets/css/images/bars.svg");
 								background-position: right center;
 								background-repeat: no-repeat;
 								content: '';
@@ -3999,7 +3999,7 @@ body {
 /* Banner */
 
 	#banner {
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url(../../images/banner.jpg);
+		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -4107,7 +4107,7 @@ body {
 		}
 
 			#banner .more:after {
-				background-image: url("images/arrow.svg");
+				background-image: url("../../../PDP-Website%20(Test)/assets/css/images/arrow.svg");
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: contain;
@@ -4252,10 +4252,10 @@ body {
 
 	#main > header {
 		padding: 4em 0 2em 0!important;
-		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -4402,10 +4402,10 @@ body {
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -4423,10 +4423,10 @@ body {
 
 	body.is-mobile.landing #banner,
 	body.is-mobile.landing {
-		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
+		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../../PDP-Website%20(Test)/images/banner.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
