--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4435,4 +4435,138 @@ body {
 		background-size: cover;
 	}
 
+/* Start of owl testimonial css */
+	.fa-solid, .fas {
+		color:#ffca1b !important
+	}
+	*{/* Variables for storing colors */
 	
+		--card-clr: #102d3b;
+		--body-clr: #102d3b;
+		--primary-clr: #b1eaff;
+		--heading-clr: #fbfbfb;
+		--text-clr: #cacede;
+		box-shadow:none!important;
+	
+	}
+
+	.testimonials-section{
+		width: 100%;
+		padding: 0px 8%;
+	}
+	.testimonials-section .section-header{
+		max-width: 700px;
+		text-align: center;
+		margin: 30px auto 40px;
+	}
+	.section-header h1{
+		position: relative;
+		font-size: 36px;
+		color: var(--primary-clr);
+		margin-bottom:30px;
+	}
+	.testimonials-container{
+		position: relative;
+	}
+	.testimonials-container .testimonial-card{
+		padding: 20px;
+	}
+	.testimonial-card .test-card-body{
+		background-color: var(--card-clr);
+		box-shadow: 2px 2px 20px rgba(0,0,0,0.12);
+		padding: 20px;
+		height: 450px;
+	}
+	.test-card-body .quote{
+		display: flex;
+		align-items: center;
+	}
+	.test-card-body .quote i{
+		font-size: 45px;
+		color: var(--heading-clr);
+		margin-right: 20px;
+	}
+	.test-card-body .quote h2{
+		color: var(--heading-clr);
+	}
+	.test-card-body p{
+		margin: 10px 0px 15px;
+		font-size: 14px;
+		line-height: 1.5;
+		color: var(--text-clr);
+	}
+	.test-card-body .ratings{
+		margin-top: 20px;
+	}
+	.test-card-body .ratings i{
+		font-size: 17px;
+		color: var(--primary-clr);
+		cursor: pointer;
+	}
+	.testimonial-card .profile{
+		display: flex;
+		align-items: center;
+		margin-top: 25px;
+	}
+	.profile .profile-image{
+		width: 80px;
+		height: 100px;
+		border-radius: 20%;
+		overflow: hidden;
+		margin-right: 15px;
+	}
+	.profile .profile-image img{
+		width: 100%;
+		height: 100%;
+		border-radius: 50%;
+		object-fit: cover;
+	}
+	.profile .profile-desc{
+		display: flex;
+		flex-direction: column;
+	}
+	.profile-desc span:nth-child(1){
+		font-size: 24px;
+		font-weight: bold;
+		color: var(--primary-clr);
+	}
+	.profile-desc span:nth-child(2){
+		font-size: 15px;
+		color: var(--text-clr);
+	}
+	.owl-nav{
+		position: absolute;
+		right: 20px;
+		bottom: -10px;
+	}
+	.owl-nav button{
+		border-radius: 50% !important;
+	}
+	.owl-nav .owl-prev i,
+	.owl-nav .owl-next i{
+		padding: 15px !important;
+		border-radius: 50%;
+		font-size: 18px !important;
+		background-color: var(--card-clr) !important;
+		color: var(--primary-clr);
+		cursor: pointer;
+		transition: 0.4s;
+	}
+	.owl-nav .owl-prev i:hover,
+	.owl-nav .owl-next i:hover{
+		background-color: var(--primary-clr) !important;
+		color: #e9e9e9;
+	}
+	.owl-dots{
+		margin-top: 15px;
+		margin-bottom:30px;
+		
+	}
+	.owl-dots .owl-dot span{
+		background-color: #434753 !important;
+		padding: 6px !important;
+		}
+	.owl-dot.active span{
+		background-color: var(--primary-clr) !important;
+	}
+	/*end of owl testimonial css */
