--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4509,14 +4509,12 @@ body {
 	}
 	.profile .profile-image{
 		width: 80px;
-		height: 100px;
+		height: auto;
 		border-radius: 20%;
 		overflow: hidden;
 		margin-right: 15px;
 	}
 	.profile .profile-image img{
-		width: 100%;
-		height: 100%;
 		border-radius: 5%;
 		object-fit: cover;
 	}
