--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2670,7 +2670,7 @@ body {
 		background-color: transparent;
 		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #fff;
+		box-shadow: inset 0 0 0 2px #fff!important;
 		color: #fff;
 		cursor: pointer;
 		display: inline-block;
