--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4555,16 +4555,15 @@ body {
 	button.owl-dot,button.owl-prev, button.owl-next {box-shadow:none!important}
 
 	.owl-theme .owl-nav.disabled+.owl-dots{
-		display: flex;
-		justify-content: center;
-		align-items: center;
 		position: fixed;
-		inset: 0px;
-		width: 12rem;
-		height: 5rem;
-		max-width: 100vw;
-		max-height: 100dvh;
-		margin: 140px auto;
+  left: 0px;
+  right: 0px;
+  bottom: 8px;
+  width: 12rem;
+  max-width: calc(
+    100vw - 8px * 2
+  );
+  margin-inline: auto;
 	}
 
 	.owl-nav .owl-prev i:hover,
