--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3236,7 +3236,7 @@ body {
 		}
 
 		.wrapper.style1 {
-			background-color: rgb(240 240 240);
+			background-color: rgb(255, 255, 255);
 			color: #228ea6!important;
 		}
 
