--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -246,7 +246,7 @@ input, select, textarea {
 			border-bottom-color: transparent;
 			text-decoration: underline;
 			text-underline-offset: 2.5px;
-			color: #00ccff;
+			color: #009fe3;
 			
 		}
 
@@ -261,6 +261,8 @@ input, select, textarea {
 
 	p {
 		margin: 0 1em 2em 1em;
+		margin-left: 20%;
+	    margin-right: 20%;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -1955,12 +1957,11 @@ input, select, textarea {
 		}
 
 	}
-
 /*popup boxes*/
 
 body {
 	font-family: Arial, sans-serif;
-	background-color: #1a7287;
+	background-color: #00a195;
 	height: 100vh;
   }
   
@@ -2647,141 +2648,34 @@ body {
 			
 
 /* Button */
+input[type="submit"].primary,
+input[type="reset"].primary,
+input[type="button"].primary,
+button.primary,
+.button.primary {
+  background: linear-gradient(90deg, #00b4a0 0%, #009fe3 100%) !important; /* gradient */
+  box-shadow: none !important;
+  color: #ffffff !important;
+  border: none;
+}
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		-moz-appearance: none;
-		-webkit-appearance: none;
-		-ms-appearance: none;
-		appearance: none;
-		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: transparent;
-		border-radius: 3px;
-		border: 0;
-		box-shadow: inset 0 0 0 2px #fff!important;
-		color: #fff;
-		cursor: pointer;
-		display: inline-block;
-		font-size: 0.8em;
-		font-weight: 600;
-		height: 3.125em;
-		letter-spacing: 0.225em;
-		line-height: 3.125em;
-		max-width: 80em;
-		padding: 0 2.75em;
-		text-align: center;
-		text-decoration: none;
-		text-transform: uppercase;
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-	}
+/* Hover state – slightly darker gradient */
+input[type="submit"].primary:hover,
+input[type="reset"].primary:hover,
+input[type="button"].primary:hover,
+button.primary:hover,
+.button.primary:hover {
+  background: linear-gradient(90deg, #009985 0%, #007fbf 100%) !important;
+}
 
-		input[type="submit"]:hover,
-		input[type="reset"]:hover,
-		input[type="button"]:hover,
-		button:hover,
-		.button:hover {
-			background-color: rgba(144, 144, 144, 0.25);
-		}
-
-		input[type="submit"]:active,
-		input[type="reset"]:active,
-		input[type="button"]:active,
-		button:active,
-		.button:active {
-			background-color: rgba(144, 144, 144, 0.5);
-		}
-
-		input[type="submit"].icon:before,
-		input[type="reset"].icon:before,
-		input[type="button"].icon:before,
-		button.icon:before,
-		.button.icon:before {
-			margin-right: 0.5em;
-		}
-
-		input[type="submit"].fit,
-		input[type="reset"].fit,
-		input[type="button"].fit,
-		button.fit,
-		.button.fit {
-			width: 100%;
-		}
-
-		input[type="submit"].small,
-		input[type="reset"].small,
-		input[type="button"].small,
-		button.small,
-		.button.small {
-			font-size: 0.8em;
-		}
-
-		input[type="submit"].large,
-		input[type="reset"].large,
-		input[type="button"].large,
-		button.large,
-		.button.large {
-			font-size: 1.35em;
-		}
-
-		input[type="submit"].primary,
-		input[type="reset"].primary,
-		input[type="button"].primary,
-		button.primary,
-		.button.primary {
-			background-color: #1caccf;
-			box-shadow: none !important;
-			color: #ffffff !important;
-		}
-
-			input[type="submit"].primary:hover,
-			input[type="reset"].primary:hover,
-			input[type="button"].primary:hover,
-			button.primary:hover,
-			.button.primary:hover {
-				background-color: #007fa9 !important;
-			}
-
-			input[type="submit"].primary:active,
-			input[type="reset"].primary:active,
-			input[type="button"].primary:active,
-			button.primary:active,
-			.button.primary:active {
-				background-color: #007fa9 !important;
-			}
-
-		input[type="submit"].disabled, input[type="submit"]:disabled,
-		input[type="reset"].disabled,
-		input[type="reset"]:disabled,
-		input[type="button"].disabled,
-		input[type="button"]:disabled,
-		button.disabled,
-		button:disabled,
-		.button.disabled,
-		.button:disabled {
-			pointer-events: none;
-			opacity: 0.25;
-		}
-
-		@media screen and (max-width: 736px) {
-
-			input[type="submit"],
-			input[type="reset"],
-			input[type="button"],
-			button,
-			.button {
-				height: 3.75em;
-				line-height: 3.75em;
-			}
-
-		}
+/* Active state – even deeper gradient */
+input[type="submit"].primary:active,
+input[type="reset"].primary:active,
+input[type="button"].primary:active,
+button.primary:active,
+.button.primary:active {
+  background: linear-gradient(90deg, #00846e 0%, #006aa5 100%) !important;
+}
 
 
 /* Features & Support Package */
@@ -3121,31 +3015,31 @@ body {
 		}
 
 		.spotlight:nth-child(1) {
-			background-color: #218ea6;
+			background-color: #0d6760;
 		}
 
 		.spotlight:nth-child(2) {
-			background-color: #1f89a1;
+			background-color: #00938a;
 		}
 
 		.spotlight:nth-child(3) {
-			background-color: #187388;
+			background-color: #008f86;
 		}
 
 		.spotlight:nth-child(4) {
-			background-color: #146273;
+			background-color: #00887f;
 		}
 
 		.spotlight:nth-child(5) {
-			background-color: #15343fa3;
+			background-color: #006d66;
 		}
 
 		.spotlight:nth-child(6) {
-			background-color: rgba(0, 0, 0, 0.45);
+			background-color:#005c55; 
 		}
 
 		.spotlight:nth-child(7) {
-			background-color: rgba(0, 0, 0, 0.525);
+			background-color:#004741;
 		}
 
 		.spotlight:nth-child(8) {
@@ -3271,8 +3165,10 @@ body {
 			}
 
 			.wrapper.style1 header.major p {
-				color: #228ea6!important;
+				color:#323232 !important; 
 				padding: 0 1em 0 1em;
+				margin-left: 20%;
+   				margin-right: 20%;
 			}
 
 			.wrapper.style1 label {
@@ -3398,11 +3294,11 @@ body {
 			}
 
 		.wrapper.style2 {
-			background-color: #2e3842;
+			background-color: #1a896d;
 		}
 
 		.wrapper.style3 {
-			background-color: #15343fa3;
+			background-color: #095c47;
 			color: #fdfdfd;
 		}
 
@@ -3877,7 +3773,7 @@ body {
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #102d3b;
+		background: #00a195;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
@@ -3996,7 +3892,7 @@ body {
 /* Banner */
 
 	#banner {
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url(../../images/banner.jpg);
+		background-image: -webkit-linear-gradient(top,#004f49, #00a195), url(../../images/banner.jpg);
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -4249,10 +4145,10 @@ body {
 
 	#main > header {
 		padding: 4em 0 2em 0!important;
-		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: -webkit-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: -ms-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -4399,10 +4295,10 @@ body {
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: -webkit-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: -ms-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -4411,7 +4307,7 @@ body {
 	}
 
 	body.landing #footer {
-		background-color: rgb(33 142 166);
+		background-color:#017f76;
 	}
 
 	body.is-mobile.landing #page-wrapper {
@@ -4420,10 +4316,10 @@ body {
 
 	body.is-mobile.landing #banner,
 	body.is-mobile.landing {
-		background-image: -moz-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, #0b202d, #59e1ff), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: -webkit-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: -ms-linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
+		background-image: linear-gradient(top,#004f49,#00a195), url(../../images/banner.jpg);
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -4437,9 +4333,9 @@ body {
 	
 		--card-clr: #102d3b;
 		--body-clr: #102d3b;
-		--primary-clr: #b1eaff;
+		--primary-clr: #00a195; 
 		--heading-clr: #fbfbfb;
-		--text-clr: #cacede;
+		--text-clr: #102d3b;
 		box-shadow:none!important;
 	
 	}
@@ -4454,7 +4350,7 @@ body {
 	.testimonials-section{
 		width: 100%;
 		padding: 0px 8%;
-		background-color: #218ea6;
+		background-color: #ffffff;
 	}
 	.testimonials-section .section-header{
 		max-width: 700px;
@@ -4474,8 +4370,8 @@ body {
 		padding: 20px;
 	}
 	.testimonial-card .test-card-body{
-		background-color: var(--card-clr);
-		box-shadow: 2px 2px 20px rgba(0,0,0,0.12);
+		background-color:#1a827a; 
+		box-shadow: 2px 2px 20px #39a28b;
 		padding: 20px;
 		}
 	.test-card-body .quote{
@@ -4494,7 +4390,7 @@ body {
 		margin: 10px 0px 15px;
 		font-size: 14px;
 		line-height: 1.5;
-		color: var(--text-clr);
+		color: #ffffff;
 	}
 	.test-card-body .ratings{
 		margin-top: 0px;
@@ -4542,15 +4438,16 @@ body {
 		border-radius: 50% !important;
 	}
 	.owl-nav .owl-prev i,
-	.owl-nav .owl-next i{
-		padding: 15px !important;
-		border-radius: 50%;
-		font-size: 18px !important;
-		background-color: var(--card-clr) !important;
-		color: var(--primary-clr);
-		cursor: pointer;
-		transition: 0.4s;
-	}
+.owl-nav .owl-next i {
+  padding: 15px !important;
+  border-radius: 50%;
+  font-size: 18px !important;
+  background: linear-gradient(90deg, #00b4a0 0%, #009fe3 100%) !important;
+  color: white !important; /* ensure contrast */
+  cursor: pointer;
+  transition: 0.4s;
+}
+
 
 	button.owl-dot,button.owl-prev, button.owl-next {box-shadow:none!important}
 
